# NovaCraft

./: .gitignore  Cargo.toml  NAMING_CONVENTIONS.md  README.md
.github/ISSUE_TEMPLATE/: better_code_quality.md  bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci.yml
crates/novacraft_derive/: Cargo.toml
crates/novacraft_derive/src/: lib.rs
crates/novacraft_meshing_backend/: Cargo.toml
crates/novacraft_meshing_backend/src/: adj.rs  lib.rs  mesh_metadata.rs  mesh_utils.rs  meshem.rs  pbs.rs  update.rs
crates/novacraft_meshing_backend/src/mesh_utils/: xsprite_mesh.rs
crates/novacraft_meshing_backend/src/util/: direction.rs  mod.rs
crates/novacraft_utils/: Cargo.toml
crates/novacraft_utils/src/: chunk_utils.rs  face.rs  lib.rs
src/: .chunk.rs.rustfmt  action.rs  blocks.rs  chunk.rs  console.rs  direction.rs  helper_ecs_utils.rs  inventory.rs  main.rs  mesh_utils.rs  meshify_custom_meshes.rs  player.rs  terrain.rs  visuals.rs
src/action/: action_utils.rs  break_blocks.rs  break_place_blocks.rs  place_blocks.rs
src/blocks/: INIT_BLOCKS.rs  block_descriptor.rs  blockreg.rs  dynamic_property.rs  existence_conditions.rs  meshreg.rs  properties.rs  registries.rs  xsprite_mesh.rs
src/blocks/block_defs/: mod.rs
src/chunk/: block_update.rs  chunk_queue.rs  chunkmd.rs  falling_block.rs  introduce.rs  misc.rs  smooth_lighting.rs  spawn.rs  update_chunks.rs
src/console/: commands.rs  global_parameter.rs
src/console/commands/: set.rs
src/env/: mod.rs  sky.rs
src/mesh_utils/: submesh.rs  xsprite_mesh.rs
src/player/: cage.rs  controller.rs  misc_systems.rs  movement.rs
src/player/controller/: movement.rs
src/utils/: mod.rs
src/visuals/: block_highlight.rs  crosshair.rs  debug_mode.rs
