[package]
name = "nova_craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_console = { path = "../bevy-console" }
# bevy_meshem = "0.3"
bevy_meshem = { path = "../meshem/bevy_meshem" }
clap = "4.4.7"
futures-lite = "1.13.0"
noise = "0.8.2"
rand = "0.8.5"
arrayref = "0.3.7"
