[package]
name = "nova_craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build]
# target = "x86_64-pc-windows-gnu"
#
[dependencies]
bevy = "0.12"
bevy_console = { git = "https://github.com/msklosak/bevy-console.git", rev = "c1b5901ca7c6e9da2e2fb39fbbf8b97deb5466f5" }
# bevy_meshem = "0.3"
bevy_meshem = { git = "https://github.com/Adamkob12/bevy_meshem.git" }
clap = "4.4.7"
futures-lite = "1.13.0"
noise = "0.8.2"
rand = "0.8.5"
arrayref = "0.3.7"
parry3d = "0.13.5"
bevy_xpbd_3d = { git = "https://github.com/Adamkob12/bevy_xpbd.git" }
bevy_atmosphere = "0.8.1"
