[package]
name = "novacraft_meshing_backend"
version = "0.1.0"
edition = "2021"
authors = ["Adamkob12"]
description = "The meshing backend of NovaCraft. Fork of bevy_meshem"
license = "MIT"
repository = "https://github.com/Adamkob12/NovaCraft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
rand = "0.8.5"
